@@ -26,6 +26,7 @@
 void widget_terminal_clear(variable *var);
 GtkWidget *widget_terminal_create(
 	AttributeSet *Attr, tag_attr *attr, gint Type);
+void widget_terminal_fork_command(GtkWidget *widget, tag_attr *attr);
 gchar *widget_terminal_envvar_all_construct(variable *var);
 gchar *widget_terminal_envvar_construct(GtkWidget *widget);
 void widget_terminal_fileselect(
